[gd_scene load_steps=8 format=3 uid="uid://dca4ljq2ixjib"]

[ext_resource type="Texture2D" uid="uid://bepe52b1p7id0" path="res://Towers/Sprites/oil.png" id="1_60f2e"]
[ext_resource type="Script" path="res://Towers/Scripts/oil_bullet.gd" id="1_fq7ic"]
[ext_resource type="Texture2D" uid="uid://cvftnjonkm6p4" path="res://Towers/Sprites/splash.png" id="3_gt0w5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gb8gg"]

[sub_resource type="Animation" id="Animation_u1g5e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SplashSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ervjk"]
resource_name = "splash"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SplashSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ivouo"]
_data = {
"RESET": SubResource("Animation_u1g5e"),
"splash": SubResource("Animation_ervjk")
}

[node name="oilBullet" type="Node2D" groups=["oil"]]
z_index = -1
script = ExtResource("1_fq7ic")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_60f2e")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gb8gg")

[node name="SplashSprite" type="Sprite2D" parent="."]
visible = false
texture_filter = 1
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_gt0w5")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ivouo")
}

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="SelfDelete" type="Timer" parent="."]

[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
[connection signal="timeout" from="SelfDelete" to="." method="_on_self_delete_timeout"]
